# tinyfabulist

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ai_models.yaml  comparate.py  cost_estimator.py  csv  diversity_evaluation.json  docker-compose.yaml  env-sample  eval.sh  evaluate.jsonl  evaluate.py  evaluate_ro.py  evaluation_results.json  evaluation_results_1.json  evaluation_results_2.json  fables.csv  fables_final.csv  fables_prompts.csv  fables_with_meta.csv  generate.py  huggingface_all_model_metadata.csv  logger.py  merge_results.py  pipeline.sh  prompts.jsonl  pyproject.toml  requirements.txt  results.jsonl  setup.py  stats.py  temp.py  tinyfabulist.py  tinyfabulist.yaml  translate.py  translate_deepl.py  (+4 more)
conf/: enhance.yaml  evaluator.yaml  generator.yaml  translator.yaml
data/: metrics_comparison.csv  metrics_plot.html  output.jsonl  sampled_entries.xlsx
docs/: Phi-4_model.md  about_fables.md  decision_log.md  eval.md  index.md  pipeline.md
evals/: eval_model.py  evals_cli.py  evals_config.yml  gpt_eval.py
evaluate/: en.py  ro.py
fables/: config.yml  core.py  tinyfab_cli.py
notebooks/: model.ipynb
paper/: tinyfabulist.tex
phi-4/: config.yml  core.py  core_with_pipeline.py  generate_fables_prompts.py  hf_models.py  hf_models2.py  tinyfab_cli.py
scripts/: datetime_diff.sh  entrypoint.sh
src/: cli.py  generative_ai_core.py  pipeline.py  pipeline.sh  requirements.txt  run_examples.sh
tinyfabulist/: generate.py  jsonl_field_merger.py  logger.py  metrics_stats.py  sample_matching_entries.py  stats.py  utils.py  (+1 more)
(+442 files in other folders)
