[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-fabulist"
version = "0.1.0"
description = "Set of LLM-based tools for generating millions of unique fables by combining storytelling patterns, linguistic creativity, and moral lessons. Designed for language modeling, NLP research, and educational applications."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = []
dependencies = [
  "openai",       # For the OpenAI API client
  "PyYAML",
  "requests",
  "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/klusai/tiny-fabulist"
Repository = "https://github.com/klusai/tiny-fabulist"

[tool.setuptools.packages.find]
where = ["src"]
